--- a/app/scss/_config.scss
+++ b/app/scss/_config.scss
@@ -1,21 +1,28 @@
 // USER VARIABLES SECTION
 
-$accent: orange; // Accent Color
+$accent: #f57d34; // Accent Color
 $fontsize: 16px; // Body Font Size
 $textcolor: #333; // Text Color
 $lineheight: 1.65; // Document Line Height
-$userfont: Roboto, sans-serif; // User Font Family
+$userfont: Open Sans, sans-serif; // User Font Family
 $systemfont: -apple-system, BlinkMacSystemFont, Arial, sans-serif; // System Font Family
 
 // Bootstrap compatible gutter variable => $gutter
 $grid-gutter-width: 30px;
 $gutter: $grid-gutter-width;
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1230px,
+  xxl: 1230px
+);
 
 // IMPORT SECTION
 
 @import 'node_modules/bootstrap/scss/bootstrap-reboot.scss'; // Bootstrap Reboot collection
 @import 'node_modules/bootstrap/scss/mixins/_breakpoints.scss'; // Bootstrap Breakpoints mixin
-// @import 'node_modules/bootstrap/scss/bootstrap-grid.scss'; // Optional Bootstrap Grid
+@import 'node_modules/bootstrap/scss/bootstrap-grid.scss'; // Optional Bootstrap Grid
 // @import 'node_modules/bootstrap/scss/utilities/_sizing.scss'; // Optional Bootstrap Utilites
 
 // FONTS LOAD SECTION
@@ -26,14 +33,16 @@ $gutter: $grid-gutter-width;
 		font-style: $fstyle;
 		font-weight: $fweight;
 		src: local($fname), url($furl) format('woff2');
-		// font-display: swap; // Uncomment to initially display system fonts
+		font-display: swap; // Uncomment to initially display system fonts
 	}
 }
 
-@include font('Roboto', normal, 400, '../fonts/roboto-regular-webfont.woff2');
-@include font('Roboto', italic, 400, '../fonts/roboto-italic-webfont.woff2');
-@include font('Roboto', normal, 700, '../fonts/roboto-bold-webfont.woff2');
-@include font('Roboto', italic, 700, '../fonts/roboto-bolditalic-webfont.woff2');
+@include font('Open Sans', normal, 300, '../fonts/OpenSans-Light.woff2');
+@include font('Open Sans', normal, 400, '../fonts/OpenSans-Regular.woff2');
+@include font('Open Sans', normal, 600, '../fonts/OpenSans-SemiBold.woff2');
+@include font('Open Sans', normal, 700, '../fonts/OpenSans-Bold.woff2');
+@include font('Open Sans', normal, 900, '../fonts/OpenSans-ExtraBold.woff2');
+@include font('PT Sans', normal, 700, '../fonts/PT-Sans-Bold.woff2');
 
 // GENERAL DOCUMENT STYLES
 
